# gobind

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum
assets/: block_diagram.puml
examples/: CMakeLists.txt  calling_convention.cpp  hello_world.cpp  simple.cpp  two.cpp
examples/cmake/: calling_convention.cmake  hello_world.cmake  simple.cmake  two.cmake
src/: CMakeLists.txt
src/cmd/: args.go  go.mod  main.go
src/cmd/cgobind/: cgobind.go  template.go
src/cmd/cgobind/c_wrapper/: c_wrapper.go  gtype2golang.h
src/cmd/gobind/: args.go  go.mod  go.sum  main.go
src/cmd/gobind/bind/: bind.go  module.go.tmpl  template.go
src/cmd/gobind/cgobind/: cgobind.go  template.go
src/cmd/gobind/cgobind/c_wrapper/: c_wrapper.go
src/cpp/: CMakeLists.txt
src/cpp/gobind/: #gobind.hpp#  CMakeLists.txt  alloc.hpp  error.cpp  error.h  gobind.cpp  gobind.h  gobind.hpp  gobind_function_table.cpp  gobind_function_table.h  gobind_module.cpp  gobind_module.h  gobind_module_factory.cpp  gobind_module_factory.hpp  gobind_type.cpp  gobind_type.h  gobind_type_identify.hpp  golang_function_table.cpp  golang_module.cpp  golang_module.h  golang_module_factory.cpp  golang_module_factory.hpp
src/go/: args.go  go.mod  gobind.go  main.go
src/go/cgobind/: call_helper.h  cgobind.go  cgobind.h  template.go
src/go/cgobind/c_wrapper/: cgobind_wrapper.h
src/go/cgobind/include/: cgobind.h  cgobind_wrapper.h
src/go/util/: util.go
src/include/: gobind.hpp
src/lib/: CMakeLists.txt
src/lib/cgobind/: CMakeLists.txt  cgobind.c  cgobind.go  cgobind.h  cgobind_helper.c  cgobind_helper.h  cgobind_wrapper.c  go.mod  go.sum  gtype2golang.c  gtype2golang.h
src/lib/go_util/: go.mod  util.go
src/lib/gobind/: alloc.hpp  error.cpp  gobind.cpp  gobind.h  gobind.hpp  gobind_function_table.cpp  gobind_module.h  gobind_module_factory.cpp  gobind_module_factory.hpp  gobind_type.h  gobind_type_identify.hpp  macros.h
